@@ -1,0 +1,2 @@
+[easy_install]
+find_links = http://github.com/srid/appdirs/tarball/master#egg=appdirs
